mock-exams/topic-wise/ServicesAndNetworking/network-policies/NetworkPolicy/q4/frontend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: backend
      ports:
        - port: 8080
          protocol: TCP
    - ports:
      - port: 53
        protocol: UDP
